--- a/.gitignore
+++ b/.gitignore
@@ -3,25 +3,18 @@ figures/
 
 # Other files and folders
 .settings/
-src/__pycache__/
+__pycache__/
 .DS_Store
-src/scripts/.ipynb_checkpoints/
+scripts/.ipynb_checkpoints/
 .idea/
-src/.idea/
-src/operators/__pycache__/
-src/fields/__pycache__/
-src/notebooks/
-src/test/benchmark.py
-src/test/visualisation.py
-src/test/__pycache__/
-src/test/check_polynomials.py
-src/operators/quicc_supplements/__pycache__/
+operators/__pycache__/
+fields/__pycache__/
 notebooks/
-TOs_paper/
-MC_paper/
-
-# Data folder
-data/
+test/benchmark.py
+test/visualisation.py
+test/__pycache__/
+test/check_polynomials.py
+operators/quicc_supplements/__pycache__/
 
 # Executables
 *.swf
